--- a/advent2021.cabal
+++ b/advent2021.cabal
@@ -7,7 +7,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Main, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10
+  exposed-modules:     Main, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day14, Day15
   ghc-options:         -Wall -fwarn-tabs
   build-depends:       base >= 4.7 && < 5, split, containers, pqueue
   hs-source-dirs:      .
